<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">foodie</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Main Activity -->
    <string name="drawer_open">Drawer open!</string>
    <string name="drawer_close">Drawer close!</string>
    <string name="nav_drawer_meal">Meals</string>
    <string name="nav_drawer_recipe">Recipes</string>
    <string name="nav_drawer_grocery">Groceries</string>
    <string name="nav_drawer_about">About Foodie</string>

    <!-- Add Meal Dialog -->
    <string name="add_meal_title">ADD MEAL</string>
    <string name="add_meal_title_edit_text">Add meals:</string>
    <string name="add_meal_button">ADD</string>
    <string name="add_meal_button_cancel">CANCEL</string>

    <!-- Add Recipe Dialog -->
    <string name="add_recipe_title">ADD RECIPE</string>
    <string name="add_recipe_title_edit_text">Name:</string>
    <string name="add_recipe_preparation_edit_text">Preparation:</string>
    <string name="add_recipe_cooking_edit_text">Cooking Time:</string>
    <string name="add_recipe_button">ADD</string>
    <string name="add_recipe_button_cancel">CANCEL</string>

</resources>
