<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_invite_friends"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_add_a_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/add_recipe_title"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/add_recipe_title_edit_text"
            android:textColor="@color/foodie_primary_color"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/text_meal_preparation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/add_recipe_preparation_edit_text"
            android:textColor="@color/foodie_primary_color"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_meal_preparation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/text_meal_cooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/add_recipe_cooking_edit_text"
            android:textColor="@color/foodie_primary_color"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_meal_cooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textEmailAddress"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_cancel_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_recipe_button_cancel"
                android:paddingTop="20dp"
                android:paddingLeft="25dp"
                android:paddingBottom="20dp"
                android:paddingRight="25dp"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:clickable="true"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/text_add_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingRight="25dp"
                android:paddingBottom="20dp"
                android:paddingLeft="25dp"
                android:gravity="center"
                android:text="@string/add_recipe_button"
                android:textColor="@color/foodie_primary_color"
                android:textStyle="bold"
                android:clickable="true"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>